Fixed stickied comments styling with collapse left
Removed unnecessary tags in artwork credit

--- a/sass/partials/_artwork_type.scss
+++ b/sass/partials/_artwork_type.scss
@@ -8,7 +8,6 @@
         	top: 176px;
         	color: #FFFDF9;
         	display: block;
-        	vertical-align: middle;
         	font-size: 0pt;
         }
     }
@@ -23,7 +22,6 @@
             display: block;
             border-left: 5px none;
             padding: 2px 15px 2px 8px;
-            vertical-align: middle;
             background-color: rgba(0, 0, 0, 0.31);
             font-size: 8pt;
             font-weight: 100;
@@ -55,7 +53,6 @@
 		display: block;
 		border-left: 5px none;
 		padding: 2px $artwork_margin 2px 5px;
-		vertical-align: middle;
 		background-color: rgba(0, 0, 0, 0.4);
 		font-size: 8pt;
 		font-weight: 100;
